@@ -1,7 +1,9 @@
+/Google-API-Client-*
+/.build
+/_build*
+/Build
 MYMETA.*
-META.yml
-Makefile
-inc/
-pm_to_blib
+!META.json
+/.prove
 eg/*/token.dat
 *~
