@@ -1,0 +1,3 @@
+use 5.006;
+use Module::Build::Tiny 0.030;
+Build_PL();
