@@ -1,19 +1,0 @@
-.gitignore
-Changes
-inc/Module/Install.pm
-inc/Module/Install/Base.pm
-inc/Module/Install/Can.pm
-inc/Module/Install/Fetch.pm
-inc/Module/Install/Makefile.pm
-inc/Module/Install/Metadata.pm
-inc/Module/Install/ReadmeFromPod.pm
-inc/Module/Install/Repository.pm
-inc/Module/Install/Win32.pm
-inc/Module/Install/WriteAll.pm
-lib/Google/API/Client.pm
-Makefile.PL
-MANIFEST			This list of files
-META.yml
-README
-t/00_compile.t
-xt/pod.t
